--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+#lib/
 lib64/
 parts/
 sdist/
@@ -141,5 +141,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-
+bot_list.json
+.bash_history
+.pki/
+.local/
 # End of https://www.toptal.com/developers/gitignore/api/python
